# RustyWeather

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
pkg/: rusty_weather_lib.js
src/: app_main.rs  lib.rs  main.rs
src/weather/: dummyweathercontroller.rs  mod.rs  openweathercontroller.rs  utils.rs  weathercontroller.rs  weatherdisplaycontroller.rs
ui/: about-box.slint  city_weather.slint  city_weather_tile.slint  expanded_city_weather_tile.slint  forecast_with_graph.slint  location_datatypes.slint  location_search.slint  main.slint  page-base.slint  ui_utils.slint  weather_datatypes.slint
ui/controls/: busy-layer.slint  generic.slint  stackview.slint  weather.slint
ui/style/: styles.slint
