[package]
name = "rusty-weather"
version = "0.1.0"
authors = ["David Vincze", "Justyna Hudziak"]
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.38"
directories = "5.0.1"
env_logger = "0.11.3"
log = "0.4.21"
openweather_sdk = "0.1.6"
serde = "1.0.197"
serde_json = "1.0.115"
slint = { version = "1.6", features = ["backend-android-activity-06"] }
tokio = "1.37.0"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
slint-build = "1.6"

[patch.crates-io]
openweather_sdk = { git = 'https://github.com/vdave007/openweather_sdk' }

# Android-activity support
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

# Andoroid settings
# See more: https://github.com/rust-mobile/cargo-apk?tab=readme-ov-file#manifest
[package.metadata.android]
package = "com.felgo.demos.rustyweather"
resources = "android-res"
build_targets = [ "aarch64-linux-android" ]

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 32

[package.metadata.android.application]
label = "Rusty Weather"
icon = "@drawable/icon"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"